# gpr-300-fa2024-jake-baranowski

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: lit.frag  postprocess.frag  postprocess.vert
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: depthOnly.frag  lit.frag  lit.vert
assignments/assignment3/: main.cpp
assignments/assignment3/assets/: deferredLit.frag  depthOnly.frag  geometryPass.frag  geometryPass.vert
assignments/assignment4/: main.cpp
assignments/assignment4/assets/: deferredLit.frag  lightOrb.frag  lit.vert
assignments/assignment5/: main.cpp
assignments/assignment5.1/: CMakeLists.txt  main.cpp
assignments/assignment5/assets/: depthOnly.vert  geometryPass.vert  postprocess.frag
core/ew/: texture.cpp
core/jb/: frameBuffer.cpp  frameBuffer.h  transform.h  transformNode.h
